templates/service-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: schulung
spec:
  selector:
    app: service-a
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: schulung
spec:
  selector:
    app: service-b
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  namespace: schulung
spec:
  selector:
    app: discovery-server
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  type: LoadBalancer  # Ermöglicht externen Zugriff auf das Eureka-Dashboard
